# RAG_Dashboard

./: .dockerignore  .env.example  .gitignore  LICENSE  Makefile  README.md  TODO.md  activate.sh  docker-compose.yml  pyproject.toml  requirements.txt  run_setup.sh
backend/: Dockerfile  requirements.txt
backend/app/: __init__.py  analysis.py  bootstrap.py  datasets.py  main.py  schemas.py  workflows.py
benchmarks/: public_benchmark.json
dashboard/public/: index.html
data/: README.md  public_eval_set.json
docs/: DATASETS.md
docs/reports/: method_sweep_metrics.md
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: dashboard-app.tsx
frontend/lib/: api.ts  types.ts
scripts/: consolidate_method_sweeps.py  download_hf_datasets.py  run_backend_method_sweep.py
services/logicrag_api/: Dockerfile  app.py
src/rag_eval/: __init__.py  cli.py  cost.py  dashboard.py  evaluator.py  io.py  logicrag_client.py  metrics.py  models.py  providers.py  real_runner.py  reporting.py  runtime.py  strategies.py
tests/: test_backend_workflow.py  test_cost.py  test_evaluator.py  test_metrics.py  test_runtime_config.py  test_sweep_consolidation.py
